update in leaguage English

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,24 @@
 {
+    "label": {
+       "home": "Home",
+       "category" : "Category",
+       "features" : "Features",
+       "contact" : "Contact",
+       "team" : "Team",
+       "logout": "Logout",
+       "login_here" : "Login Here",
+       "sign_in" : "Sign In",
+       "sign_up" : "Sign Up",
+       "sign_in_to_your_account": "Sign in to your account",
+       "create_an_account" : "Create an account",
+       "already_have_an_account ": "Already have an account? ",
+       "email": "Your Email",
+       "password": "Your Password",
+       "confirm_password": "Confirm password",
+       "remeber_me" : "Remember Me",
+       "forgot_password" : "Forgot Password",
+       "dont_have_account": "Don't have an account yet?"
+    },
     "label_ku": "Hello Labelku",
     "message": "Welcome to Rizwan Gustama"
 }
