--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -1,4 +1,22 @@
 {
-    "label_ku": "Naon Labelku",
-    "message": "Selamat Datang Kepada Rizwan Gustama"
+    "label": {
+        "home": "Beranda",
+        "category": "Kategori",
+        "features": "Fitur",
+        "contact": "Kontak Kami",
+        "team": "Anggota",
+        "logout": "Logout",
+        "login_here": "Login Here",
+        "sign_in": "Sign In",
+        "sign_up": "Sign Up",
+        "sign_in_to_your_account": "Sign in to your account",
+        "create_an_account": "Create an account",
+        "already_have_an_account ": "Already have an account? ",
+        "email": "Your Email",
+        "password": "Your Password",
+        "confirm_password": "Confirm password",
+        "remember_me": "Remember Me",
+        "forgot_password": "Forgot Password",
+        "dont_have_account": "Don't have an account yet?"
+    }
 }
